Fix: Shiftdown of messagewindow

--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -155,8 +155,6 @@
 	}
 	#msgcontainer{
 		overflow-y: auto;
-		float: left;
-		width: 80%;
 		height: 93%;
 		box-shadow: inset 0px 0px 51px -8px;
 		background-image: url('../icons/texture.png');
